fixed visibility

--- a/themes/team22theme/css/theme.css
+++ b/themes/team22theme/css/theme.css
@@ -14174,9 +14174,12 @@ body {
 
 .wp-block-cover {
   width: 1000px;
-  visibility: hidden;
   margin-left: -15px;
   margin-right: -15px;
+}
+
+.wp-block-separator {
+  visibility: hidden;
 }
 
 .entry-content > p, .entry-content > h2 {
